--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <button onclick="register()">Sign up</button>
                         </div>
                         <div id="button_container" class="login">
-                            <button onclick="window.open(url='https://sachiofficial.github.io/Blogs.html')">Alredy have an account</button>
+                            <button onclick="window.open(url='https://sachicodex.github.io/next_music_login/login.html')">Alredy have an account</button>
                         </div>
 
                     </div>
