--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
                         </div>
                         
                         <div id="button_container" class="login">
-                            <button onclick="window.open(url='https://sachiofficial.github.io/Blogs.html')">Do you haven't account</button>
+                            <button onclick="window.open(url='https://sachicodex.github.io/next_music_login/')">Do you haven't account</button>
                         </div>
 
                     </div>
